@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.17133 (28 Oct 2010)
+
+  28 Oct 2010; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.01.17133.ebuild:
+  Version bump, this version matches portage-2.2.0_alpha2
+
   26 Oct 2010; Fabian Groffen <grobian@gentoo.org>
   portage-2.2.01.17086.ebuild:
   Drop no longer existing bsd-chflags installation, bug #342711
